table spacing fixed for scrolling

--- a/bactive-angular/src/app/profile/profile.component.css
+++ b/bactive-angular/src/app/profile/profile.component.css
@@ -18,6 +18,7 @@
 	border-width: 1px;
 	border-color: #777a7f;
 	padding: 25px;
+	width: 12%;
 }
 
 #notFree {
